<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Embroidery_Main">

    <Button
        android:id="@+id/btnRegularEmbroidery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="389dp"
        android:text="@string/btnRegularEmbroidery"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnEtsy"
        app:layout_constraintEnd_toStartOf="@+id/btnCustomDesign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCustomDesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="389dp"
        android:text="@string/btnCustomDesign"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnEtsy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegularEmbroidery"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEtsy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/btnEtsy"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txtEmbroidery"
        android:textColor="#E56717"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtBannerDef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBannerDef"
        android:layout_width="350dp"
        android:layout_height="131dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtEmbroideryDef"
        android:textAlignment="viewStart"
        android:textColor="#E56717"
        app:layout_constraintBottom_toTopOf="@+id/videoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBanner" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="171dp"
        android:layout_height="150dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegularEmbroidery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBannerDef" />

    <Button
        android:id="@+id/btnWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="90dp"
        android:text="@string/btnWatch"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/videoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBannerDef"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>