<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTintMode="multiply"
    android:scaleType="centerCrop"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnEmbroidery"
        android:layout_width="280dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:text="@string/btnEmbroidery"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBanner"
        android:layout_width="280dp"
        android:layout_height="75dp"
        android:text="@string/btnBanner"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnShirts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEmbroidery" />

    <Button
        android:id="@+id/btnShirts"
        android:layout_width="280dp"
        android:layout_height="75dp"
        android:text="@string/btnShirts"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBanner" />

    <Button
        android:id="@+id/btnContact"
        android:layout_width="280dp"
        android:layout_height="75dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btnContact"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShirts" />
</androidx.constraintlayout.widget.ConstraintLayout>